--- a/styles/globals.css
+++ b/styles/globals.css
@@ -10,7 +10,7 @@
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background: #0c0c0c;
+  /* background: #0c0c0c; */
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
